fixing aos whitespace scroll

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -234,6 +234,10 @@
 
 @media(max-width: 430px){
 
+  [data-aos-delay] {
+    transition-delay: 0;
+  }
+  
   .mobileTabletNav ul li {
     font-size: 2.7rem;
   }
