--- a/styles/style.css
+++ b/styles/style.css
@@ -1224,6 +1224,10 @@ textarea {
 }
 
 @media (max-width: 430px) {
+  [data-aos-delay] {
+    -webkit-transition-delay: 0;
+            transition-delay: 0;
+  }
   .mobileTabletNav ul li {
     font-size: 2.7rem;
   }
